Fixed form font-size and spacing and added more information to README

--- a/style.css
+++ b/style.css
@@ -262,7 +262,7 @@ header:hover::before {
   /* border: none; */
   /* width: 100%; */
   padding: 0.6rem;
-  font-size: 1.8rem;
+  font-size: 2rem;
   font-family: inherit;
   border: none;
   background-color: #c4cbd1;
@@ -278,11 +278,13 @@ header:hover::before {
 }
 
 .reset-btn {
+  font-size: 2rem;
   padding: 0.6rem 1.2rem 0.6rem 1.2rem;
-  margin-top: 2.6rem;
+  margin-top: 3rem;
   color: #333;
   transition: all 0.3s;
   cursor: pointer;
+  margin-left: 3rem;
 }
 
 .reset-btn:hover {
@@ -290,14 +292,14 @@ header:hover::before {
 }
 
 .fiber-select {
-  margin-bottom: 0.1rem;
+  /* margin-bottom: 0.1rem; */
   padding-left: 1.2rem;
   padding-right: 1.2rem;
 }
 
 label {
   display: block;
-  font-size: 1.6rem;
+  font-size: 2rem;
   font-weight: 600;
   margin-bottom: 1.2rem;
   color: #333;
